--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             </button>
         </div>
 
-        <h2 class="score-result hidden-initially"></h2>
-        <div class="computer-score-result hidden-initially"></div>
+        <h2 class="score-result" style="display: none;"></h2>
+        <div class="computer-score-result" style="display: none;"></div>
         
         <h3 class="scoreUpdate"></h3>
         
